# multi-modal-researcher

./: .env.example  .gitignore  PROJECT.md  README.md  docker-compose.base.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 15c585b2ff05_create_research_jobs_table.py  384ed2cf21df_create_research_jobs_table.py  4e8c20ca146f_.py  e2b8bcec1480_add_failure_reason_to_research_jobs.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  llm.py  messaging.py
backend/app/models/: session.py  sessions.py
backend/app/prompts/: moderation.py  podcast.py  research.py
backend/app/schemas/: moderation.py  podcast.py  research.py
backend/app/utils/: helpers.py  logging.py
backend/tests/: test_research_graph.py
backend/workers/: kafka_health_check.py  podcast_worker.py  research_worker.py  utils.py
frontend/: .env.local  Dockerfile  README.md  index.html  package-lock.json  package.json  project.md  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/docs/: blueprint.md
frontend/nginx/: nginx.conf
frontend/src/: App.tsx  actions.ts  env.d.ts  index.css  main.tsx
frontend/src/api/: config.ts
frontend/src/components/: JobCard.tsx  ProtectedRoute.tsx  header.tsx  job-list.tsx  job-submission-form.tsx  logo.tsx
frontend/src/contexts/: auth-context.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: firebase.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx
frontend/src/stores/: useAuthStore.ts  useJobStore.ts
(+19 files in other folders)
